fixed project show spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -249,6 +249,10 @@ main {
   width: 100%;
   overflow: hidden;
   transition: all 1s;
+
+  p {
+    margin-top: 30px;
+  }
 }
 
 .extra-project {
@@ -273,10 +277,10 @@ main {
   display: flex;
   width: 100%;
   justify-content: center;
-  margin: 1rem 0;
+  margin: 25px 0 15px;
 
   > * {
-    width: 4rem;
+    width: 5rem;
     text-align: center;  
   }
 
